# django_template

./: .pylintrc  pyproject.toml
config/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
